[gd_scene load_steps=5 format=3 uid="uid://cfnck60pwh4xy"]

[ext_resource type="Script" path="res://Main/Tree.gd" id="1_qp4ao"]
[ext_resource type="Script" path="res://Main/EditorScene.gd" id="1_r6ghe"]
[ext_resource type="Texture2D" uid="uid://cnfu5q2altpac" path="res://Resources/TestResources/Ground/marble.32x16.tile-set.png" id="2_fyutr"]
[ext_resource type="Script" path="res://Main/TabContainer.gd" id="2_ofaop"]

[node name="EditorScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00099, 0.999503)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_r6ghe")

[node name="GridContainer" type="HBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="GridContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Tree" type="Tree" parent="GridContainer/MarginContainer2"]
layout_mode = 2
script = ExtResource("1_qp4ao")

[node name="TabContainer" type="TabContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
all_tabs_in_front = true
script = ExtResource("2_ofaop")

[node name="TextureRect" type="TextureRect" parent="GridContainer/TabContainer"]
layout_mode = 2
texture = ExtResource("2_fyutr")

[node name="MarginContainer" type="MarginContainer" parent="GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="GridContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Test button"

[connection signal="button_clicked" from="GridContainer/MarginContainer2/Tree" to="GridContainer/TabContainer" method="_on_tree_button_clicked"]
[connection signal="child_entered_tree" from="GridContainer/MarginContainer2/Tree" to="GridContainer/TabContainer" method="_on_tree_child_entered_tree"]
[connection signal="column_title_clicked" from="GridContainer/MarginContainer2/Tree" to="GridContainer/TabContainer" method="_on_tree_column_title_clicked"]
[connection signal="custom_item_clicked" from="GridContainer/MarginContainer2/Tree" to="GridContainer/TabContainer" method="_on_tree_custom_item_clicked"]
[connection signal="item_mouse_selected" from="GridContainer/MarginContainer2/Tree" to="GridContainer/TabContainer" method="_on_tree_item_mouse_selected"]
[connection signal="item_selected" from="GridContainer/MarginContainer2/Tree" to="GridContainer/TabContainer" method="_on_tree_item_selected"]
